{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 32,
  "lineage": "4c67893f-7765-1adc-82fb-5b9fa13222f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07010a4e68239abe5",
            "domain": "vpc",
            "id": "eipalloc-0dd1f44c9533420b5",
            "network_interface": "eni-0edf82e04455a59b9",
            "private_dns": "ip-10-0-1-133.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-54-254-20-43.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.20.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chandra-test-nat-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa787af8cdd260f1",
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:instance/i-01f8e79c34d3857aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f8e79c34d3857aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chandra-test-keypairs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e071df13fcd5f4da",
            "private_dns": "ip-10-0-1-118.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.118",
            "public_ip": "13.250.63.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b70f6b3838550864",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0e414277df2563a",
            "tags": {
              "Name": "EC2 Instance"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "20m"
            },
            "vpc_security_group_ids": [
              "sg-04124e078d702c99c"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.mysql",
            "aws_key_pair.keypair1",
            "aws_security_group.mysql",
            "aws_security_group.web",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:internet-gateway/igw-03924e54cc5670f7e",
            "id": "igw-03924e54cc5670f7e",
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-igw"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd1f44c9533420b5",
            "id": "nat-05550b9e714dad21b",
            "network_interface_id": "eni-0edf82e04455a59b9",
            "private_ip": "10.0.1.133",
            "public_ip": "54.254.20.43",
            "subnet_id": "subnet-0c0e414277df2563a",
            "tags": {
              "Name": "chandra-test-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0686ada0081a10156",
            "owner_id": "626156903382",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05550b9e714dad21b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chandra-test-private"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0698574589101f09a",
            "owner_id": "626156903382",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03924e54cc5670f7e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chandra-test-public"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00863dcbd4351fe44",
            "route_table_id": "rtb-0686ada0081a10156",
            "subnet_id": "subnet-042eb14c03b598222"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69ae546a81bd898",
            "route_table_id": "rtb-0686ada0081a10156",
            "subnet_id": "subnet-0eb2b79acd5901d87"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3fcd493507e211",
            "route_table_id": "rtb-0686ada0081a10156",
            "subnet_id": "subnet-07532443580e111b0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a6a0d1dbce6ced",
            "route_table_id": "rtb-0698574589101f09a",
            "subnet_id": "subnet-0c0e414277df2563a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005d3e291cf726be9",
            "route_table_id": "rtb-0698574589101f09a",
            "subnet_id": "subnet-0e725f825d1bf9e26"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:security-group/sg-01393f4e6fd4ea670",
            "description": "managed by terrafrom for db servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01393f4e6fd4ea670",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04124e078d702c99c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "chandra-test-DBSG",
            "name_prefix": null,
            "owner_id": "626156903382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chandra-test-DBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:security-group/sg-04124e078d702c99c",
            "description": "This is for chandra-tests web servers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04124e078d702c99c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "chandra-test-webSG",
            "name_prefix": null,
            "owner_id": "626156903382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chandra-test-webSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:subnet/subnet-042eb14c03b598222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-042eb14c03b598222",
            "map_public_ip_on_launch": false,
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-private-1"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:subnet/subnet-0eb2b79acd5901d87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0eb2b79acd5901d87",
            "map_public_ip_on_launch": false,
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-private-2"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:subnet/subnet-07532443580e111b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-07532443580e111b0",
            "map_public_ip_on_launch": false,
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-private-3"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:subnet/subnet-0c0e414277df2563a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c0e414277df2563a",
            "map_public_ip_on_launch": false,
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-public-1"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:subnet/subnet-0e725f825d1bf9e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e725f825d1bf9e26",
            "map_public_ip_on_launch": false,
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-public-2"
            },
            "vpc_id": "vpc-0736e0013db086e57"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:626156903382:vpc/vpc-0736e0013db086e57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0393b75dfb9b34ced",
            "default_route_table_id": "rtb-0e7e9e4f75f3a6c7f",
            "default_security_group_id": "sg-06e0460c8ff5292e5",
            "dhcp_options_id": "dopt-201b2347",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0736e0013db086e57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7e9e4f75f3a6c7f",
            "owner_id": "626156903382",
            "tags": {
              "Name": "chandra-test-vpc"
            }
          }
        }
      ]
    }
  ]
}